[package]
name = "tardis-rs"
description = "A rust crate that allows you to easily replay historical market data and stream live market data through Tardis.dev's API"
authors = ["Marcus Lee <marcuslee@balaenaquant.com>"]
readme = "README.md"
license = "LGPL-3.0-only"
homepage = "https://github.com/cybotrade/tardis-rs/"
repository = "https://github.com/cybotrade/tardis-rs/"
keywords = ["tardis", "market-data", "cryptocurrency", "trading"]
version = "0.1.3"
edition = "2021"

[features]
default = []
machine = [
    "dep:async-stream",
    "dep:async-stream",
    "dep:futures-util",
    "dep:tokio-tungstenite",
]

[dependencies]

# Async
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
async-stream = { version = "0.3", optional = true }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
], optional = true }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error
thiserror = "1.0"

# Websocket
tokio-tungstenite = { version = "0.20", features = [
    "rustls-tls-native-roots",
], optional = true }

# HTTP
reqwest = { version = "0.11", features = ["json"] }

# SerDe
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }

# Utils
urlencoding = "2.1"
tracing = "0.1"

[dev-dependencies]
tracing-test = "0.2"
